# PG_003

./: .gitignore  Basic_Info.xlsx  CLAUDE.md  Injection_History.xlsx  PG_003_Metadata_Generator.md  README.md  continue_from_here.md  createDB.py  example_checkable_list.py  main.py  metaGenStarter.bat  pyproject.toml  ui_widget_names.md
.claude/: settings.local.json
classes/: __init__.py  add_injection_trees.py  customized_delegate.py  delegate_custom.py  delegate_table.py  dialog_addProperties.py  dialog_addTree.py  dialog_cloneInfo.py  dialog_clone_info.py  dialog_confirm.py  dialog_createTagSet.py  dialog_database.py  dialog_exp_db.py  dialog_exportMD.py  dialog_getPath.py  dialog_inj_manager.py  dialog_insertProperties.py  dialog_insert_props.py  dialog_saveTagSet.py  dialog_saveTemplate.py  dialog_save_template.py  editable_comboBox.py  expinfo_tab_manager.py  helper_combo_editor.py  helper_dir_watcher.py  model_checkable_list.py  model_comboBox.py  model_dynamic_list.py  model_list_1.py  model_list_2.py  model_metadata_form.py  model_table.py  model_table_1.py  model_table_2.py  tag_tab_manager.py  thread_concatenator.py  thread_tiff_stacker.py  widget_buttonSet.py  widget_tagDisplay.py
controllers/: __init__.py  controllers_REC_DB.py  controllers_add_injection.py  controllers_concatenator.py  ctrl_abf_note.py  ctrl_add_inj.py  ctrl_exp_info.py  ctrl_rec_import.py  ctrl_rec_writer.py  ctrl_tiff_stacker.py  handlers_EXP.py  handlers_REC.py  handlers_add_injection.py  handlers_concatenator.py  handlers_expInfo.py  handlers_expinfo.py  handlers_parameters.py  (+2 more)
(+94 files in other folders)
