[project]
name = "pg-003"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "glob2>=0.7",
    "numpy>=2.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pendulum>=3.0.0",
    "pyabf>=2.3.8",
    "pyside6>=6.8.1,!=6.8.1.1",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "tifffile>=2025.12.20",
    "tifftools>=1.6.1",
]

[tool.ruff]
line-length = 120
fix=true
unfixable = ["F401"]
